--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-node_modules
+# Dependencies
+node_modules/
+*/node_modules/
+
+# Build files
+dist/
+build/
+*/dist/
+*/build/
+
+# Environment files
+.env
+*/.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
